fix post titles not shrinking on mobile view, and clean up optimize-image partial

--- a/assets/sass/components/_content.scss
+++ b/assets/sass/components/_content.scss
@@ -59,46 +59,6 @@ div#content {
       padding-left: 0.25em;
     }
   }
-
-  div.embed {
-    &.video {
-      video {
-        display: block;
-        margin: 1em auto;
-        max-width: 100%;
-        height: auto;
-      }
-    }
-
-    &.youtube {
-      position: relative;
-      padding-bottom: 56.25%;
-      margin: 1em auto;
-      height: 0;
-      overflow: hidden;
-
-      iframe.youtube-player {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: inline-block;
-        border: 0;
-      }
-    }
-
-    &.gh-buttons {
-      text-align: center;
-    }
-
-    &.codepen {
-      iframe {
-        width: 100%;
-        border: 0;
-      }
-    }
-  }
 }
 
 // Responsive
