--- a/assets/sass/components/_global.scss
+++ b/assets/sass/components/_global.scss
@@ -73,6 +73,7 @@ a {
   }
 }
 
+b,
 strong {
   letter-spacing: 0.008em; // not sure why the discrepancy between weights
 }
