--- a/assets/sass/pages/_single.scss
+++ b/assets/sass/pages/_single.scss
@@ -44,8 +44,8 @@ div#layout--single {
   div#layout--single {
     padding: 0.8em 1.1em;
 
-    h1#title {
-      margin-top: 0.5em;
+    h1.title {
+      margin-top: 0.4em;
       font-size: 1.8em;
     }
   }
